fix horizontal scrollbar being viewed on overlay dialogs

--- a/askani/css/base.css
+++ b/askani/css/base.css
@@ -202,7 +202,7 @@ a.has-meta {
 }
 .ui-dialog-content .even {
     clear:left;
-    margin-right:20px;
+    margin-right:15px;
 }
 .ui-dialog-content select {
     min-width:150px;
@@ -238,4 +238,8 @@ a.doc {
     display:block;
     width:45px;
     height:45px;
+}
+
+.field {
+  margin:10px 5px;
 }
